add two lab project and drow sphere and cylinder in Lab1

--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,46 @@
-group 'org.anstreth'
-version '1.0-SNAPSHOT'
+subprojects {
 
-apply plugin: 'java'
+    group 'org.anstreth'
+    version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+    apply plugin: 'java'
 
-repositories {
-    mavenCentral()
-    maven {
-        url 'http://www.jogamp.org/deployment/maven/'
+    sourceCompatibility = 1.8
+
+    repositories {
+        mavenCentral()
+        maven {
+            url 'http://www.jogamp.org/deployment/maven/'
+        }
     }
-}
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile "org.jogamp.gluegen:gluegen-rt:2.3.1"
-    compile "org.jogamp.jogl:jogl-all:2.3.1"
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.11'
+        compile "org.jogamp.gluegen:gluegen-rt:2.3.1"
+        compile "org.jogamp.jogl:jogl-all:2.3.1"
 
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-android-aarch64"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-android-armv6"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-amd64"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-armv6"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-armv6hf"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-i586"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-macosx-universal"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-solaris-amd64"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-solaris-i586"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-windows-amd64"
-    runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-windows-i586"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-android-aarch64"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-android-armv6"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-amd64"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-armv6"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-armv6hf"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-linux-i586"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-macosx-universal"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-solaris-amd64"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-solaris-i586"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-windows-amd64"
+        runtime "org.jogamp.gluegen:gluegen-rt:2.3.1:natives-windows-i586"
 
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-android-aarch64"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-android-armv6"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-amd64"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-armv6"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-armv6hf"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-i586"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-macosx-universal"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-solaris-amd64"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-solaris-i586"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-windows-amd64"
-    runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-windows-i586"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-android-aarch64"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-android-armv6"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-amd64"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-armv6"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-armv6hf"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-linux-i586"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-macosx-universal"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-solaris-amd64"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-solaris-i586"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-windows-amd64"
+        runtime "org.jogamp.jogl:jogl-all:2.3.1:natives-windows-i586"
+    }
 }
