--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,17 @@ subprojects {
     version '1.0-SNAPSHOT'
 
     apply plugin: 'java'
-
-    sourceCompatibility = 1.8
+    apply plugin: 'application'
 
     repositories {
         mavenCentral()
-        maven {
-            url 'http://www.jogamp.org/deployment/maven/'
-        }
     }
+
+    run {
+        standardInput = System.in
+    }
+
+    sourceCompatibility = 1.8
 
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.11'
