--- a/Lab2/build.gradle
+++ b/Lab2/build.gradle
@@ -2,7 +2,7 @@ group 'org.anstreth'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-
+apply plugin: 'application'
 
 repositories {
     mavenCentral()
