add Lab2 with green lighted thorus; move some common code to AbstractOpenGLApp

--- a/Lab2/build.gradle
+++ b/Lab2/build.gradle
@@ -4,10 +4,13 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'application'
 
+mainClassName = "org.anstreth.lab2.Lab2"
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile project(':Common')
 }
